<resources>
    <string name="seekbar_label_default" translatable="false">Label</string>
    <string name="app_name">Sketchty</string>
    <string name="save_sketch_activity_label">Save Sketch</string>
    <string name="about_activity_label">About</string>
    <string name="confirm_wipe_activity_label">Confirm</string>
    <string name="action_save">Save</string>
    <string name="action_open">Open</string>
    <string name="action_take_picture">Camera</string>
    <string name="action_share">Share</string>
    <string name="action_about">About</string>
    <string name="action_add_color">Reset Palette</string>
    <string name="action_wipe">New</string>
    <string name="action_undo">Undo</string>
    <string name="share_to">Share To</string>
    <string name="reset_colors_dialog_title">Reset Palette To Default?</string>
    <string name="reset_colors_dialog_message">Are you sure you want to reset all colour buttons to their default values?</string>
    <string name="edit_color_dialog_title">Edit Color Button</string>
    <string name="adjust_photo_dialog_title">Adjust Photo</string>
    <string name="adjust_image_dialog_title">Adjust Image</string>
    <string name="load_photo_dialog_title">Load Photo</string>
    <string name="reset_colors_confirmation_button">Yes</string>
    <string name="reset_colors_cancel_button">No</string>
    <string name="shared_prefs_name">sketchty_prefs</string>
    <string name="shared_image_title">Sketchty Image</string>
    <string name="about_created_by">Created by John Crawley</string>
    <string name="about_year_info">2020 – 2023</string>
    <string name="about_version">Version 4.5</string>
    <string name="tag_button_type">1</string>
    <string name="tag_button_category">8</string>
    <string name="tag_button_default_color">9</string>
    <string name="tag_button_color">2</string>
    <string name="tag_button_color_button">11</string>
    <string name="tag_button_key">7</string>
    <string name="button_type_color">3</string>
    <string name="button_type_multi_color">4</string>
    <string name="button_type_multi_shade">6</string>
    <string name="button_type_shade">5</string>
    <string name="default_color">COLOR_-16777216</string>
    <string name="save_dialogue_save_button">SAVE</string>
    <string name="save_dialogue_cancel_button">@android:string/cancel</string>
    <string name="bitmap_intent_extra">bitmap_intent_extra</string>
    <string name="preview_dialog_rotate_button">Rotate</string>
    <string name="selected_button_text">S</string>
    <string name="content_description_large_brush_indicator">Indicates a larger size for paint brush</string>
    <string name="content_description_small_brush_indicator">Indicates a smaller size for paint brush</string>
    <string name="content_description_square_shape_button">Select to paint with squares</string>
    <string name="content_description_circle_shape_button">Select to paint with circles</string>
    <string name="content_description_line_shape_button">Select to drag and draw lines</string>
    <string name="content_description_straight_line_shape_button">Select to paint a straight line with one press</string>
    <string name="content_description_pentagon_shape_button">Select to paint with pentagons</string>
    <string name="content_description_hexagon_shape_button">Select to paint with hexagons</string>
    <string name="content_description_star_shape_button">Select to paint with stars</string>
    <string name="content_description_rounded_rectangle_shape_button">Select to draw rounded squares</string>
    <string name="content_description_triangle_shape_button">Select to draw triangles</string>
    <string name="content_description_fill_style_button">Select to paint with solid shapes</string>
    <string name="content_description_broken_outline_style_button">Select to paint shapes with broken outlines</string>
    <string name="content_description_outline_style_button">Select to paint with shape outlines</string>
    <string name="content_description_jagged_outline_style_button">Select to paint with a jagged outline</string>
    <string name="content_description_spiked_style_button">Select to paint with a spikey outline</string>
    <string name="content_description_double_edge_style_button">Select to paint with double outlines</string>
    <string name="content_description_translate_style_button">Select to paint with a translated outline</string>
    <string name="content_description_no_blur_button">Disables the blur effect</string>
    <string name="content_description_outer_blur_button">Switches blur mode to outer</string>
    <string name="content_description_normal_blur_button">Switches blur mode to normal</string>
    <string name="content_description_inner_blur_button">Switches blur mode to inner</string>
    <string name="content_description_solid_blur_button">Switches blur mode to solid</string>
    <string name="content_description_shapes_button">Selects shape to draw with</string>
    <string name="content_description_styles_button">Selects style of line to draw with</string>
    <string name="content_description_gradient_button">Selects gradient</string>
    <string name="content_description_angle_button">Selects the angle to draw at</string>
    <string name="content_description_blur_button">Selects blur</string>
    <string name="content_description_shadow_button">Selects shadow</string>
    <string name="content_description_kaleidoscope_button">Selects kaleidoscope modes</string>
    <string name="content_description_splash_screen">Loading App</string>
    <string name="content_description_kaleidoscope_off_button">Turns off kaleidoscope mode</string>
    <string name="content_description_kaleidoscope_2_button">Switches to kaleidoscope mode with 2 segments</string>
    <string name="content_description_kaleidoscope_5_button">Switches to kaleidoscope mode with 5 segments</string>
    <string name="content_description_kaleidoscope_6_button">Switches to kaleidoscope mode with 6 segments</string>
    <string name="content_description_kaleidoscope_7_button">Switches to kaleidoscope mode with 7 segments</string>
    <string name="content_description_kaleidoscope_8_button">Switches to kaleidoscope mode with 8 segments</string>
    <string name="content_description_kaleidoscope_9_button">Switches to kaleidoscope mode with 9 segments</string>
    <string name="content_description_kaleidoscope_10_button">Switches to kaleidoscope mode with 10 segments</string>
    <string name="content_description_kaleidoscope_12_button">Switches to kaleidoscope mode with 12 segments</string>
    <string name="content_description_kaleidoscope_16_button">Switches to kaleidoscope mode with 16 segments</string>
    <string name="content_description_angle_zero_button">new shapes will be drawn at their original angle</string>
    <string name="content_description_angle_15_button">new shapes will be drawn at an angle of 15 degrees</string>
    <string name="content_description_angle_30_button">new shapes will be drawn at an angle of 30 degrees</string>
    <string name="content_description_angle_45_button">new shapes will be drawn at an angle of 45 degrees</string>
    <string name="content_description_angle_60_button">new shapes will be drawn at an angle of 60 degrees</string>
    <string name="content_description_angle_90_button">new shapes will be drawn at an angle of 90 degrees</string>
    <string name="content_description_angle_135_button">new shapes will be drawn at an angle of 135 degrees</string>
    <string name="content_description_angle_150_button">new shapes will be drawn at an angle of 150 degrees</string>
    <string name="content_description_angle_180_button">new shapes will be drawn at an angle of 180 degrees</string>
    <string name="content_description_angle_225_button">new shapes will be drawn at an angle of 225 degrees</string>
    <string name="content_description_angle_270_button">new shapes will be drawn at an angle of 270 degrees</string>
    <string name="content_description_angle_315_button">new shapes will be drawn at an angle of 315 degrees</string>
    <string name="content_description_angle_minus_1_button">each new shape will be drawn at an angle of 1 degree less than the last</string>
    <string name="content_description_angle_plus_1_button">each new shape will be drawn at an angle of at 1 degree greater than the last</string>
    <string name="content_description_angle_minus_15_button">each new shape will be drawn at an angle of 15 degrees less than the last</string>
    <string name="content_description_angle_plus_15_button">each new shape will be drawn at an angle of at 15 degrees greater than the last</string>
    <string name="content_description_angle_minus_30_button">each new shape will be drawn at an angle of at 30 degrees less than the last</string>
    <string name="content_description_angle_plus_30_button">each new shape will be drawn at an angle of at 30 degrees greater than the last</string>
    <string name="content_description_angle_minus_90_button">each new shape will be drawn at an angle of 90 degrees less than the last</string>
    <string name="content_description_angle_plus_90_button">each new shape will be drawn at an angle of 90 degrees greater than the last</string>
    <string name="content_description_angle_specified_angle_button">new shapes will be drawn at the angle specified by the slider</string>
    <string name="content_description_angle_random_button">every new shape will be painted at a random angle</string>
    <string name="content_description_shadow_off_button">No shadow will be applied to drawn shapes</string>
    <string name="content_description_shadow_center_button">A central shadow will be applied to new shapes</string>
    <string name="content_description_shadow_north_button">A top shadow will be applied to new shapes</string>
    <string name="content_description_shadow_north_east_button">A top-right will be applied to new shapes</string>
    <string name="content_description_shadow_east_button">A right shadow will be applied to new shapes</string>
    <string name="content_description_shadow_south_east_button">A bottom-right shadow will be applied to new shapes</string>
    <string name="content_description_shadow_south_button">A bottom shadow will be applied to new shapes</string>
    <string name="content_description_shadow_south_west_button">A bottom-left shadow will be applied to new shapes</string>
    <string name="content_description_shadow_west_button">A left shadow will be applied to new shapes</string>
    <string name="content_description_shadow_north_west_button">A top-left shadow will be applied to new shapes</string>
    <string name="content_description_no_gradient_button">No gradient will be applied</string>
    <string name="content_description_vertical_mirror_gradient_button">A vertical gradient will be applied</string>
    <string name="content_description_horizontal_mirror_gradient_button">A horizontal gradient will be applied</string>
    <string name="content_description_diagonal_gradient_button">A diagonal gradient will be applied</string>
    <string name="content_description_radial_clamp_gradient_button">A clamped gradient will be applied</string>
    <string name="content_description_radial_mirror_gradient_button">A mirrored radial gradient will be applied</string>
    <string name="content_description_radial_repeat_gradient_button">A repeated radial gradient will be applied</string>
    <string name="content_description_red_component_increase_value">Increase Red</string>
    <string name="content_description_red_component_decrease_value">Decrease Red</string>
    <string name="content_description_green_component_increase_value">Increase Green</string>
    <string name="text_skew_seekbar_label">Skew</string>
    <string name="text_edit_text_label">Text</string>
    <string name="text_bold_checkbox_label">Bold</string>
</resources>