<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_new"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/action_wipe"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_undo"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/action_undo"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_save"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/action_save"
        app:showAsAction="ifRoom"
        tools:ignore="AlwaysShowAction"/>


    <item
        android:id="@+id/action_open"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/action_open"
        app:showAsAction="ifRoom"
        tools:ignore="AlwaysShowAction"/>
    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/action_about"
        app:showAsAction="ifRoom" />


</menu>
