<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">


    <HorizontalScrollView
        android:id="@+id/controlsScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/kaleidoscopeOptionsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/shape_selector_group_top_margin"
            android:orientation="horizontal"
            android:paddingTop="@dimen/shape_options_padding_top">

            <ImageButton
                android:id="@+id/kOffButton"
                android:layout_width="@dimen/selector_button_width"
                android:layout_height="@dimen/selector_button_height"
                android:layout_marginStart="@dimen/selector_button_margin_start"
                android:layout_marginEnd="@dimen/selector_button_margin_end"
                android:layout_weight="1"
                android:contentDescription="@string/content_description_kaleidoscope_off_button"
                app:srcCompat="@drawable/k_off_button" />

            <ImageButton
                android:id="@+id/k2Button"
                android:layout_width="@dimen/selector_button_width"
                android:layout_height="@dimen/selector_button_height"
                android:layout_marginStart="@dimen/selector_button_margin_start"
                android:layout_marginEnd="@dimen/selector_button_margin_end"
                android:layout_weight="1"
                android:contentDescription="@string/content_description_kaleidoscope_2_button"
                app:srcCompat="@drawable/k_2_button" />

            <ImageButton
                android:id="@+id/k5Button"
                android:layout_width="@dimen/selector_button_width"
                android:layout_height="@dimen/selector_button_height"
                android:layout_marginStart="@dimen/selector_button_margin_start"
                android:layout_marginEnd="@dimen/selector_button_margin_end"
                android:layout_weight="1"
                android:contentDescription="@string/content_description_kaleidoscope_5_button"
                app:srcCompat="@drawable/k_5_button" />

            <ImageButton
                android:id="@+id/k6Button"
                android:layout_width="@dimen/selector_button_width"
                android:layout_height="@dimen/selector_button_height"
                android:layout_marginStart="@dimen/selector_button_margin_start"
                android:layout_marginEnd="@dimen/selector_button_margin_end"
                android:layout_weight="1"
                android:contentDescription="@string/content_description_kaleidoscope_6_button"
                app:srcCompat="@drawable/k_6_button" />

            <ImageButton
                android:id="@+id/k7Button"
                android:layout_width="@dimen/selector_button_width"
                android:layout_height="@dimen/selector_button_height"
                android:layout_marginStart="@dimen/selector_button_margin_start"
                android:layout_marginEnd="@dimen/selector_button_margin_end"
                android:layout_weight="1"
                android:contentDescription="@string/content_description_kaleidoscope_7_button"
                app:srcCompat="@drawable/k_7_button" />

            <ImageButton
                android:id="@+id/k8Button"
                android:layout_width="@dimen/selector_button_width"
                android:layout_height="@dimen/selector_button_height"
                android:layout_marginStart="@dimen/selector_button_margin_start"
                android:layout_marginEnd="@dimen/selector_button_margin_end"
                android:layout_weight="1"
                android:contentDescription="@string/content_description_kaleidoscope_8_button"
                app:srcCompat="@drawable/k_8_button" />

            <ImageButton
                android:id="@+id/k9Button"
                android:layout_width="@dimen/selector_button_width"
                android:layout_height="@dimen/selector_button_height"
                android:layout_marginStart="@dimen/selector_button_margin_start"
                android:layout_marginEnd="@dimen/selector_button_margin_end"
                android:layout_weight="1"
                android:contentDescription="@string/content_description_kaleidoscope_9_button"
                app:srcCompat="@drawable/k_9_button" />

            <ImageButton
                android:id="@+id/k10Button"
                android:layout_width="@dimen/selector_button_width"
                android:layout_height="@dimen/selector_button_height"
                android:layout_marginStart="@dimen/selector_button_margin_start"
                android:layout_marginEnd="@dimen/selector_button_margin_end"
                android:layout_weight="1"
                android:contentDescription="@string/content_description_kaleidoscope_10_button"
                app:srcCompat="@drawable/k_10_button" />

            <ImageButton
                android:id="@+id/k12Button"
                android:layout_width="@dimen/selector_button_width"
                android:layout_height="@dimen/selector_button_height"
                android:layout_marginStart="@dimen/selector_button_margin_start"
                android:layout_marginEnd="@dimen/selector_button_margin_end"
                android:layout_weight="1"
                android:contentDescription="@string/content_description_kaleidoscope_12_button"
                app:srcCompat="@drawable/k_12_button" />

            <ImageButton
                android:id="@+id/k16Button"
                android:layout_width="@dimen/selector_button_width"
                android:layout_height="@dimen/selector_button_height"
                android:layout_marginStart="@dimen/selector_button_margin_start"
                android:layout_marginEnd="@dimen/selector_button_margin_end"
                android:layout_weight="1"
                android:contentDescription="@string/content_description_kaleidoscope_16_button"
                app:srcCompat="@drawable/k_16_button" />

        </LinearLayout>

    </HorizontalScrollView>
    <include
        android:id="@+id/kaleidoscopeOptionsInclude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="center_horizontal"
        layout="@layout/kaleidoscope_options" />


</LinearLayout>