<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">


    <HorizontalScrollView
        android:id="@+id/colorScrollView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/colorButtonGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>
    </HorizontalScrollView>


    <HorizontalScrollView
        android:id="@+id/colorShadeScrollView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/shade_scroll_view_bottom_margin"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/colorScrollView">

    </HorizontalScrollView>


    <LinearLayout

        android:id="@+id/shapeOptionsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/shape_selector_group_top_margin"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorShadeScrollView">

        <ImageButton
            android:id="@+id/squareShapeButton"
            android:layout_width="@dimen/selector_button_width"
            android:layout_height="@dimen/selector_button_height"
            android:layout_marginStart="@dimen/selector_button_margin_start"
            android:layout_marginEnd="@dimen/selector_button_margin_end"
            android:layout_weight="1"
            android:contentDescription="@string/content_description_square_shape_button"
            app:srcCompat="@drawable/square_shape_button" />

        <ImageButton
            android:id="@+id/circleShapeButton"
            android:layout_width="@dimen/selector_button_width"
            android:layout_height="@dimen/selector_button_height"
            android:layout_marginStart="@dimen/selector_button_margin_start"
            android:layout_marginEnd="@dimen/selector_button_margin_end"
            android:layout_weight="1"
            android:contentDescription="@string/content_description_circle_shape_button"
            app:srcCompat="@drawable/circle_shape_button" />


        <ImageButton
            android:id="@+id/lineShapeButton"
            android:layout_width="@dimen/selector_button_width"
            android:layout_height="@dimen/selector_button_height"
            android:layout_marginStart="@dimen/selector_button_margin_start"
            android:layout_marginEnd="@dimen/selector_button_margin_end"
            android:layout_weight="1"
            android:contentDescription="@string/content_description_line_shape_button"
            app:srcCompat="@drawable/line_shape_button" />

    </LinearLayout>


    <LinearLayout

        android:id="@+id/styleOptionsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shapeOptionsLayout">

        <ImageButton
            android:id="@+id/fillStyleButton"
            android:layout_width="@dimen/selector_button_width"
            android:layout_height="@dimen/selector_button_height"
            android:layout_marginStart="@dimen/selector_button_margin_start"
            android:layout_marginEnd="@dimen/selector_button_margin_end"
            android:layout_weight="1"
            android:contentDescription="@string/content_description_fill_style_button"
            app:srcCompat="@drawable/fill_style_button" />

        <ImageButton
            android:id="@+id/brokenOutlineStyleButton"
            android:layout_width="@dimen/selector_button_width"
            android:layout_height="@dimen/selector_button_height"
            android:layout_marginStart="@dimen/selector_button_margin_start"
            android:layout_marginEnd="@dimen/selector_button_margin_end"
            android:layout_weight="1"
            android:contentDescription="@string/content_description_broken_outline_style_button"
            app:srcCompat="@drawable/broken_outline_style_button" />

        <ImageButton
            android:id="@+id/outlineStyleButton"
            android:layout_width="@dimen/selector_button_width"
            android:layout_height="@dimen/selector_button_height"
            android:layout_marginStart="@dimen/selector_button_margin_start"
            android:layout_marginEnd="@dimen/selector_button_margin_end"
            android:layout_weight="1"
            android:contentDescription="@string/content_description_outline_style_button"
            app:srcCompat="@drawable/outline_style_button" />

    </LinearLayout>

    <LinearLayout

        android:id="@+id/seekBarLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/styleOptionsLayout">

        <ImageView
            android:id="@+id/smallIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/content_description_small_brush_indicator"
            app:srcCompat="@drawable/size_indicator_small" />


        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="177dp"
            android:layout_height="50dp"
            android:indeterminate="false"
            android:max="@integer/brush_size_max_default"
            android:min="@integer/brush_size_min_default"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            android:progress="150" />

        <ImageView
            android:id="@+id/largeIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/content_description_large_brush_indicator"
            app:srcCompat="@drawable/size_indicator_large" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
